--- a/css/summary/summary.css
+++ b/css/summary/summary.css
@@ -15,6 +15,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  transition: all 300ms ease-in-out;
 }
 
 .summary-greeting {
@@ -131,7 +132,7 @@
 }
 
 .tasks-info span:last-child {
-  font-size: 20px;
+  font-size: 22px;
   font-weight: 400;
   color: var(--mockup-color);
   transition: all 300ms ease-in-out;
@@ -153,7 +154,7 @@
 }
 
 .summary-change-content span:last-child {
-  font-size: 20px;
+  font-size: 22px;
   font-weight: 400;
   color: var(--mockup-color);
   transition: font-size 300ms ease-in-out;
