--- a/css/board/board.css
+++ b/css/board/board.css
@@ -121,7 +121,9 @@
   background-color: var(--white-color);
   display: none;
 }
-
+.board-card {
+  transition: all 300ms ease-in-out;
+}
 .content-container-board {
   position: sticky;
   overflow-y: auto;
@@ -130,7 +132,10 @@
   z-index: 100;
   transition: all 300ms ease-in-out;
 }
-
+.board-box h2 {
+  color: var(--mockup-color);
+  font-weight: 7s00;
+}
 .content-bottom-container-board {
   display: flex;
   align-items: center;
