--- a/css/board/board.css
+++ b/css/board/board.css
@@ -59,6 +59,7 @@
   margin-top: 24px;
   max-width: 100vw;
   min-width: 200px;
+  transition: all 300ms ease-in-out;
 }
 
 .add-task-2 {
@@ -72,11 +73,13 @@
   border-radius: 10px;
   padding: 3px;
   gap: 10px;
+  transition: all 300ms ease-in-out;
 }
 
 .drop-area {
   min-height: 80px;
   max-width: 100vw;
+  transition: all 300ms ease-in-out;
 }
 
 .drag-area-hover,
@@ -99,6 +102,7 @@
   align-items: center;
   overflow-x: auto;
   padding-block: 16px;
+  transition: all 300ms ease-in-out;
 }
 .drag-area:first-child {
   padding-left: 24px;
@@ -134,7 +138,8 @@
 }
 .board-box h2 {
   color: var(--mockup-color);
-  font-weight: 7s00;
+  font-weight: 700;
+  transition: all 300ms ease-in-out;
 }
 .content-bottom-container-board {
   display: flex;
