--- a/css/board/board_add_task_overlay.css
+++ b/css/board/board_add_task_overlay.css
@@ -84,6 +84,7 @@
   .board-at-overlay {
     bottom: 0px;
     left: 232px;
+    top: 0;
 
     background: #2f2f2f8d;
   }
@@ -91,11 +92,18 @@
     position: static;
   }
   .at-section {
-    margin-top: 58px;
     margin-inline: 16px;
     border-radius: 20px;
     background: white;
+    width: 100%;
     padding: 16px;
+  }
+  .board-at-wrapper {
+    margin-top: 100px;
+    height: calc(100vh - 100px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
 
@@ -130,6 +138,9 @@
   }
 }
 @media (max-width: 760px) {
+  .at-section {
+    height: 100vh;
+  }
   .content-bottom-container-board {
     position: sticky;
     padding-inline: 0;
@@ -149,7 +160,7 @@
     fill: white;
   }
   .content-container-board {
-    max-height: calc(100vh - 360px);
+    max-height: calc(100vh - 320px);
     margin-top: 48px;
   }
   .board-at-headline {
@@ -163,5 +174,43 @@
 @media (max-width: 466px) {
   .board-at-headline {
     font-size: 43px;
+  }
+}
+
+@media (min-width: 761px) and (max-height: 700px) {
+  .board-at-wrapper {
+    display: block;
+    margin-bottom: 0;
+    margin-top: 96px;
+  }
+  .at-section {
+    height: 100vh;
+    width: 100%;
+    margin: 0;
+    border-radius: 0;
+  }
+  .content-container-board {
+    max-height: calc(100vh - 275px);
+    margin-top: 42px;
+  }
+  .board-at-headline {
+    top: 0;
+    font-size: 48px;
+  }
+  .close-board-at {
+    top: 32px;
+  }
+}
+@media (min-width: 1341px) and (max-height: 700px) {
+  .content-container-board {
+    max-height: calc(100vh - 218px);
+    margin-top: 42px;
+  }
+  .at-section {
+    border-radius: 20px;
+    margin-inline: 64px;
+  }
+  .close-board-at {
+    top: 16px;
   }
 }
