--- a/css/board/board_add_task_overlay.css
+++ b/css/board/board_add_task_overlay.css
@@ -14,6 +14,7 @@
 }
 .content-container-board {
   overflow-y: auto;
+  transition: all 300ms ease-in-out;
 }
 
 .at-section.card-visible {
@@ -142,9 +143,11 @@
     height: 100vh;
   }
   .content-bottom-container-board {
-    position: sticky;
-    padding-inline: 0;
+    position: fixed;
+    padding-left: 16px;
+    padding-right: 48px;
     background: white;
+    bottom: 190px;
   }
 
   .close-board-at {
@@ -176,7 +179,35 @@
     font-size: 43px;
   }
 }
-
+@media (max-width: 760px) and (max-height: 700px) {
+  .board-at-headline {
+    font-size: 48px;
+  }
+  .content-container-board {
+    margin-top: 48px;
+    max-height: calc(100vh - 300px);
+  }
+  .content-bottom-container-board {
+    bottom: 180px;
+    margin-top: 0;
+  }
+}
+@media (max-width: 760px) and (max-height: 500px) {
+  .board-at-headline {
+    display: none;
+  }
+  .content-container-board {
+    margin-top: -25px;
+    max-height: calc(100vh - 230px);
+  }
+  .board-at-headline,
+  .close-board-at {
+    top: 4px;
+  }
+  .close-board-at {
+    left: 85%;
+  }
+}
 @media (min-width: 761px) and (max-height: 700px) {
   .board-at-wrapper {
     display: block;
@@ -204,7 +235,6 @@
 @media (min-width: 1341px) and (max-height: 700px) {
   .content-container-board {
     max-height: calc(100vh - 218px);
-    margin-top: 42px;
   }
   .at-section {
     border-radius: 20px;
