board sending tasks works

--- a/css/add_task/add_task_media.css
+++ b/css/add_task/add_task_media.css
@@ -71,6 +71,9 @@
 }
 
 @media (min-width: 1341px) {
+  .board-at-headline {
+    left: 74px;
+  }
   .at-label-style {
     color: var(--mockup-color);
   }
