--- a/css/board/board_add_task_overlay.css
+++ b/css/board/board_add_task_overlay.css
@@ -126,6 +126,7 @@
     margin-inline: 64px;
     transform: translateY(0);
     transform: translateX(100%);
+    padding: 74px;
   }
 
   .board-at-headline {
