--- a/css/add_task/add_task_media.css
+++ b/css/add_task/add_task_media.css
@@ -147,6 +147,11 @@
     height: 16px;
   }
 }
+@media (max-width: 780px) {
+  .bottom-btns-container {
+    gap: 2px;
+  }
+}
 
 @media (max-width: 760px) {
   .at-label-style,
