--- a/css/board/board_add_task_overlay.css
+++ b/css/board/board_add_task_overlay.css
@@ -2,12 +2,12 @@
   position: absolute;
   top: 96px;
   bottom: 80px;
+  background: white;
   left: 0px;
   right: 0px;
-  background: white;
   z-index: 999;
 }
-.at-section {
+.board-at-section {
   padding: 0px 16px 0px 16px;
   overflow-y: auto;
   transform: translateY(100%);
@@ -18,7 +18,7 @@
   transition: all 300ms ease-in-out;
 }
 
-.at-section.card-visible {
+.board-at-section.card-visible {
   transform: translateY(0);
   transform: translateX(0);
 }
@@ -63,10 +63,10 @@
     top: 32px;
     right: 40px;
   }
-  .at-section .close-board-at:hover {
+  .board-at-section .close-board-at:hover {
     background: var(--placeholder-color);
   }
-  .at-section .close-board-at:active,
+  .board-at-section .close-board-at:active,
   .close-board-at:active {
     background: var(--focus-color-btn);
   }
@@ -82,7 +82,7 @@
   .content-bottom-container-board {
     position: static;
   }
-  .at-section {
+  .board-at-section {
     margin-inline: 16px;
     border-radius: 20px;
     background: white;
@@ -113,7 +113,7 @@
     height: calc(100vh - 390px);
     padding: 4px;
   }
-  .at-section {
+  .board-at-section {
     max-width: calc(100vw - 232px - 128px);
     margin-inline: 64px;
     transform: translateY(0);
@@ -136,73 +136,86 @@
     font-size: 64px;
   }
 }
-@media (max-width: 760px) {
-  .close-board-at {
-    top: 38px;
-    right: 32px;
+
+@media (max-width: 857px) {
+  .board-at-section {
+    margin-inline: 0px;
   }
-  .at-section {
-    height: 100vh;
+}
+
+@media (max-width: 760px) {
+  .content-container-board {
+    max-height: calc(100vh - 380px);
+  }
+  .close-board-at {
+    top: 32px;
+    right: 40px;
+  }
+  .board-overlay {
+    bottom: 0px;
+    left: 0px;
+    top: 0;
+    background: #2f2f2f8d;
   }
   .content-bottom-container-board {
-    position: fixed;
-    padding-left: 16px;
-    padding-right: 48px;
-    background: white;
-    bottom: 190px;
+    position: static;
   }
-
+  .board-at-section {
+    margin-inline: 16px;
+    border-radius: 20px;
+    background: white;
+    width: 100%;
+    padding: 16px;
+  }
+  .board-at-wrapper {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
   .close-board-at:active {
     background: var(--focus-color-btn);
   }
   .close-board-at:active svg path {
     fill: white;
   }
-  .content-container-board {
-    max-height: calc(100vh - 320px);
-    margin-top: 72px;
-  }
-  .board-at-headline {
-    position: absolute;
-    left: 16px;
-    top: 16px;
-    font-size: 54px;
-  }
 }
 
-@media (max-width: 466px) {
+@media (max-width: 481px) {
+  .board-at-section {
+    margin-inline: 0px;
+  }
   .board-at-headline {
     font-size: 43px;
   }
+  .close-board-at {
+    top: 28px;
+  }
 }
 @media (max-width: 760px) and (max-height: 700px) {
-  .board-at-headline {
-    font-size: 48px;
+  .board-at-section {
+    margin-inline: 0px;
+    border-radius: 0;
+    height: 100vh;
+  }
+  .board-at-wrapper {
+    display: block;
   }
   .content-container-board {
-    margin-top: 48px;
-    max-height: calc(100vh - 300px);
-  }
-  .content-bottom-container-board {
-    bottom: 180px;
-    margin-top: 0;
+    max-height: calc(100vh - 150px);
   }
 }
+
 @media (max-width: 760px) and (max-height: 500px) {
   .board-at-headline {
-    display: none;
+    font-size: 38px;
   }
   .content-container-board {
-    margin-top: 0px;
-    max-height: calc(100vh - 230px);
+    max-height: calc(100vh - 120px);
   }
-  .board-at-headline,
-  .close-board-at {
-    top: 0px;
-  }
-  .close-board-at {
-    z-index: 999;
-    left: 85%;
+  .bottom-container-position {
+    position: absolute;
+    bottom: 8px;
   }
 }
 @media (min-width: 761px) and (max-height: 700px) {
@@ -210,14 +223,14 @@
     display: block;
     margin-bottom: 0;
   }
-  .at-section {
+  .board-at-section {
     height: 100vh;
     width: 100%;
     margin: 0;
     border-radius: 0;
   }
   .content-container-board {
-    max-height: calc(100vh - 275px);
+    max-height: calc(100vh - 200px);
     margin-top: 42px;
   }
   .board-at-headline {
@@ -230,25 +243,33 @@
 }
 @media (min-width: 1341px) and (max-height: 700px) {
   .content-container-board {
-    max-height: calc(100vh - 275px);
-    margin-top: 42px;
-    height: calc(100vh - 290px);
+    height: calc(100vh - 240px);
+    margin-top: 0px;
+    max-height: none;
   }
-  .at-section {
+  .board-at-section {
     height: calc(100vh - 96px);
     margin-inline: 64px;
     border-radius: 20px;
   }
   .board-at-wrapper {
-    display: block;
+    display: flex;
     margin-bottom: 0;
-    margin-top: 96px;
   }
 }
-@media (min-width: 1341px) and (max-height: 700px) {
+
+@media (min-width: 1341px) and (max-height: 500px) {
+  .board-at-section {
+    height: 100vh;
+    margin-inline: 0px;
+    border-radius: 20px;
+    padding: 24px;
+  }
   .content-container-board {
-    height: calc(100vh - 240px);
-    margin-top: 0px;
-    max-height: none;
+    margin-top: 24px;
+    height: calc(100vh - 110px);
+  }
+  .close-board-at {
+    top: 12px;
   }
 }
